--- a/MoviePlanner/MovieCell.xib
+++ b/MoviePlanner/MovieCell.xib
@@ -50,6 +50,7 @@
                     <constraint firstItem="Gwq-uB-66w" firstAttribute="leading" secondItem="Aty-Ya-7g7" secondAttribute="leading" id="BTV-Qp-pxH"/>
                     <constraint firstItem="Aty-Ya-7g7" firstAttribute="top" secondItem="Gwq-uB-66w" secondAttribute="bottom" constant="4" id="FPT-Qk-YNI"/>
                     <constraint firstItem="9yM-Sw-Jpq" firstAttribute="top" secondItem="xkV-tG-jLn" secondAttribute="top" constant="10" id="GhT-Zf-jwv"/>
+                    <constraint firstItem="Rtb-MC-Tpr" firstAttribute="leading" secondItem="xkV-tG-jLn" secondAttribute="leading" constant="80" id="H85-hi-VRJ"/>
                     <constraint firstItem="Gwq-uB-66w" firstAttribute="leading" secondItem="9yM-Sw-Jpq" secondAttribute="trailing" constant="66" id="J6o-Ge-x79"/>
                     <constraint firstItem="Gwq-uB-66w" firstAttribute="top" secondItem="qwF-li-kKR" secondAttribute="bottom" constant="4" id="RC8-v8-JFR"/>
                     <constraint firstItem="qwF-li-kKR" firstAttribute="leading" secondItem="Rtb-MC-Tpr" secondAttribute="leading" id="ROU-HM-oYp"/>
