--- a/MoviePlanner/MoviesTonightViewController.xib
+++ b/MoviePlanner/MoviesTonightViewController.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MoviesTonightViewController">
             <connections>
-                <outlet property="tableView" destination="Fiz-3Q-Rur" id="IXE-22-F2e"/>
+                <outlet property="tableView" destination="Fiz-3Q-Rur" id="ARE-cd-cSi"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -25,7 +25,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Movies Tonight" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3oa-3r-0tQ">
-                    <rect key="frame" x="15" y="161" width="147" height="21"/>
+                    <rect key="frame" x="11" y="167" width="147" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="highlightedColor"/>
